[gd_scene load_steps=14 format=3 uid="uid://dnvnt4nrmcavq"]

[ext_resource type="Script" path="res://Scenes/Enemy/enemy_stoner.gd" id="1_o1o2c"]
[ext_resource type="Texture2D" uid="uid://c38rajpnhuavf" path="res://Assets/enemies/stoner/enemy_rpg.png" id="1_p7jtj"]
[ext_resource type="Shader" path="res://Scenes/Shaders/hurt.gdshader" id="2_1iwic"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0n6w0"]
resource_local_to_scene = true
shader = ExtResource("2_1iwic")
shader_parameter/flash_color = Color(0.976471, 0, 0, 1)
shader_parameter/flash_modifier = 0.0

[sub_resource type="Animation" id="Animation_20iob"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_ntf1i"]
resource_name = "move_down"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [5, 6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_uwt0s"]
resource_name = "move_left"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13, 14]
}

[sub_resource type="Animation" id="Animation_54fs3"]
resource_name = "move_right"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}

[sub_resource type="Animation" id="Animation_t0upd"]
resource_name = "move_up"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [15, 16, 17, 18, 19]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u2i8w"]
_data = {
"RESET": SubResource("Animation_20iob"),
"move_down": SubResource("Animation_ntf1i"),
"move_left": SubResource("Animation_uwt0s"),
"move_right": SubResource("Animation_54fs3"),
"move_up": SubResource("Animation_t0upd")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_mlwh5"]
radius = 11.0454

[sub_resource type="CircleShape2D" id="CircleShape2D_ji8wv"]
radius = 14.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5hjgv"]
radius = 15.0
height = 32.0

[node name="enemy_stoner" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_o1o2c")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_0n6w0")
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_p7jtj")
hframes = 5
vframes = 4
frame = 1

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_u2i8w")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_mlwh5")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5
autostart = true

[node name="EnemyHitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 14

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyHitbox"]
shape = SubResource("CircleShape2D_ji8wv")
debug_color = Color(0.870588, 0.0509804, 0, 0.419608)

[node name="EnemyAttack" type="Area2D" parent="."]
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyAttack"]
light_mask = 2
shape = SubResource("CapsuleShape2D_5hjgv")
debug_color = Color(0, 0, 0, 0.42)

[node name="StuckTimer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="EnemyHitbox" to="." method="_on_enemy_hitbox_area_entered"]
